--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,7 +1,7 @@
 
 AM_CPPFLAGS   = -I..
 AM_C_CPPFLAGS = -I..
-AM_LDFLAGS = ../mpsrc/libmpio.la
+AM_LDFLAGS = ../mpsrc/libjubatus_mpio.la
 
 check_PROGRAMS = \
 		listen_connect \
