--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@ AC_INIT(mpsrc/wavy_kernel.h)
 AC_CONFIG_AUX_DIR(ac)
 AC_CANONICAL_TARGET
 
-AM_INIT_AUTOMAKE(mpio, 0.3.7)
+AM_INIT_AUTOMAKE(jubatus_mpio, 0.3.7)
 AC_CONFIG_HEADER(config.h)
 
 AC_SUBST(CFLAGS)
@@ -116,7 +116,7 @@ fi
 AC_MSG_RESULT($enable_debug)
 
 AC_OUTPUT([Makefile
-		   mp/Makefile
+		   jubatus/mp/Makefile
 		   mpsrc/Makefile
 		   test/Makefile])
 
