--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,5 @@
+# Copyright (C) 2013 Preferred Infrastructure and Nippon Telegraph and Telephone Corporation.
+
 SUBDIRS = jubatus/mp mpsrc test
 
 DOC_FILES = \
