--- a/configure.in
+++ b/configure.in
@@ -1,3 +1,5 @@
+# Copyright (C) 2013 Preferred Infrastructure and Nippon Telegraph and Telephone Corporation.
+
 AC_INIT(mpsrc/wavy_kernel.h)
 AC_CONFIG_AUX_DIR(ac)
 AC_CANONICAL_TARGET
