--- a/mpsrc/Makefile.am
+++ b/mpsrc/Makefile.am
@@ -1,3 +1,4 @@
+# Copyright (C) 2013 Preferred Infrastructure and Nippon Telegraph and Telephone Corporation.
 
 lib_LTLIBRARIES = libjubatus_mpio.la
 
