Enable to use a build directory different to source directory

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,8 +1,8 @@
 # Copyright (C) 2013 Preferred Infrastructure and Nippon Telegraph and Telephone Corporation.
 
-AM_CPPFLAGS   = -I..
-AM_C_CPPFLAGS = -I..
-AM_LDFLAGS = ../mpsrc/libjubatus_mpio.la
+AM_CPPFLAGS   = -isystem $(top_srcdir)
+AM_C_CPPFLAGS = -isystem $(top_srcdir)
+AM_LDFLAGS = $(top_builddir)/mpsrc/libjubatus_mpio.la
 
 check_PROGRAMS = \
 		listen_connect \
