--- a/mpsrc/Makefile.am
+++ b/mpsrc/Makefile.am
@@ -3,7 +3,7 @@
 lib_LTLIBRARIES = libjubatus_mpio.la
 
 libjubatus_mpio_la_LDFLAGS = -version-info 4:3:4
-libjubatus_mpio_la_CPPFLAGS = -I..
+libjubatus_mpio_la_CPPFLAGS = -I$(top_srcdir)
 
 libjubatus_mpio_la_SOURCES = \
 		wavy_connect.cc \
